--- a/portfolio.html
+++ b/portfolio.html
@@ -67,15 +67,15 @@
       <section class="container">
         <ul class="portfolio-content">
           <li class="portfolio-content-list">
-            <figure class="portfolio-box">
+            <figure>
+              <div class="portfolio-box">
               <img
                 src="./images/por1.jpg"
                 alt="laptop view"
                 width="370"
                 height="294"
               />
-              <div class="portfolio-overflow">
-                <p class="portfolio-overflow-txt">Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
+              <p class="portfolio-overflow">Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
               </div>
               <figcaption>
                 <p class="company">Technocrack</p>
@@ -84,15 +84,15 @@
             </figure>
           </li>
           <li class="portfolio-content-list">
-            <figure class="portfolio-box">
+            <figure>
+              <div class="portfolio-box">
               <img
                 src="./images/por2.jpg"
                 alt="basketball players"
                 width="370"
                 height="294"
               />
-              <div class="portfolio-overflow">
-                <p class="portfolio-overflow-txt">Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
+                <p class="portfolio-overflow">Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
               </div>              
               <figcaption>
                 <p class="company">New Orlean vs Golden Star</p>
@@ -101,15 +101,15 @@
             </figure>
           </li>
           <li class="portfolio-content-list">
-            <figure class="portfolio-box">
+            <figure>
+              <div class="portfolio-box">
               <img
                 src="./images/por3.jpg"
                 alt="seafood restaurant logo"
                 width="370"
                 height="294"
               />
-              <div class="portfolio-overflow">
-                <p class="portfolio-overflow-txt">Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
+              <p class="portfolio-overflow">Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
               </div>              
               <figcaption>
                 <p class="company">Restauracja Seafood</p>
@@ -118,16 +118,16 @@
             </figure>
           </li>
           <li class="portfolio-content-list">
-            <figure class="portfolio-box">
+            <figure>
+              <div class="portfolio-box">
               <img
                 src="./images/por4.jpg"
                 alt="headphones"
                 width="370"
                 height="294"
               />
-              <div class="portfolio-overflow">
-                <p class="portfolio-overflow-txt">Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
-              </div>  
+              <p class="portfolio-overflow">Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
+              </div>
               <figcaption>
                 <p class="company">Projekt Prime</p>
                 <p class="company-type">Marketing</p>
@@ -135,16 +135,16 @@
             </figure>
           </li>
           <li class="portfolio-content-list">
-            <figure class="portfolio-box">
+            <figure>
+              <div class="portfolio-box">
               <img
                 src="./images/por5.jpg"
                 alt="boxes"
                 width="370"
                 height="294"
               />
-              <div class="portfolio-overflow">
-                <p class="portfolio-overflow-txt">Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
-              </div>  
+              <p class="portfolio-overflow">Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
+              </div>
               <figcaption>
                 <p class="company">Projekt Boxes</p>
                 <p class="company-type">Aplikacja</p>
@@ -152,16 +152,16 @@
             </figure>
           </li>
           <li class="portfolio-content-list">
-            <figure class="portfolio-box">
+            <figure>
+              <div class="portfolio-box">
               <img
                 src="./images/por6.jpg"
                 alt="monitor"
                 width="370"
                 height="294"
               />
-              <div class="portfolio-overflow">
-                <p class="portfolio-overflow-txt">Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
-              </div>  
+              <p class="portfolio-overflow">Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
+              </div>
               <figcaption>
                 <p class="company">Inspiration has no Borders</p>
                 <p class="company-type">Strona internetowa</p>
@@ -169,16 +169,16 @@
             </figure>
           </li>
           <li class="portfolio-content-list">
-            <figure class="portfolio-box">
+            <figure>
+              <div class="portfolio-box">
               <img
                 src="./images/por7.jpg"
                 alt="book"
                 width="370"
                 height="294"
               />
-              <div class="portfolio-overflow">
-                <p class="portfolio-overflow-txt">Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
-              </div>  
+              <p class="portfolio-overflow">Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
+              </div>
               <figcaption>
                 <p class="company">Magazyn Limited Edition</p>
                 <p class="company-type">Dizajn</p>
@@ -186,16 +186,16 @@
             </figure>
           </li>
           <li class="portfolio-content-list">
-            <figure class="portfolio-box">
+            <figure>
+              <div class="portfolio-box">
               <img
                 src="./images/por8.jpg"
                 alt="product tag"
                 width="370"
                 height="294"
               />
-              <div class="portfolio-overflow">
-                <p class="portfolio-overflow-txt">Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
-              </div>  
+              <p class="portfolio-overflow">Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
+              </div>
               <figcaption>
                 <p class="company">Projekt LAB</p>
                 <p class="company-type">Marketing</p>
@@ -203,16 +203,16 @@
             </figure>
           </li>
           <li class="portfolio-content-list">
-            <figure class="portfolio-box">
+            <figure>
+              <div class="portfolio-box">
               <img
                 src="./images/por9.jpg"
                 alt="man working on laptop"
                 width="370"
                 height="294"
               />
-              <div class="portfolio-overflow">
-                <p class="portfolio-overflow-txt">Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
-              </div>  
+              <p class="portfolio-overflow">Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
+              </div>
               <figcaption>
                 <p class="company">Growing Business</p>
                 <p class="company-type">Aplikacja</p>
