--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <a href="#" class="logo"><span class="logo-begin">Web</span>Studio</a>
         <nav class="navigation">
           <ul class="nav-menu">
-            <li class="nav-menu-item"><a class="nav-menu-item-link" href="./index.html">Agencja</a></li>
+            <li class="nav-menu-item current"><a class="nav-menu-item-link" href="./index.html">Agencja</a></li>
             <li class="nav-menu-item"><a class="nav-menu-item-link" href="./portfolio.html">Portfolio</a></li>
             <li class="nav-menu-item"><a class="nav-menu-item-link" href="./kontakt">Kontakt</a></li>
           </ul>
