--- a/index.html
+++ b/index.html
@@ -426,20 +426,31 @@
         <form name="signup-form" class="signup-form">
           <p class="form-head">Zostaw swoje dane w formularzu poniżej</p>
           <label class="form-name">Imie
+            <svg class="form-icon" width="12px" height="12px">
+              <use href="./images/icons.svg#name-form"></use>
+            </svg>
             <input type="text" name="username" />
           </label>
           <label class="form-phone">Telefon
+            <svg class="form-icon" width="13px" height="13px">
+              <use href="./images/icons.svg#phone-form"></use>
+            </svg>
             <input type="tel" name="phone_number" />
           </label>
           <label class="form-email">Email
+            <svg class="form-icon" width="15px" height="12px">
+              <use href="./images/icons.svg#letter-form"></use>
+            </svg>
             <input type="email" name="email" />
           </label>
           <label class="form-feedback">Komentarz
             <textarea name="feedback" placeholder="Wprowadź tekst"></textarea>
-          </label>
+          </label>  
+          <input class="modal-form-policy" id="user-policy" type="checkbox" name="policy"/>
+          <label for="user-policy" class="modal-form-policy-txt">Oświadczam iż akceptuję <a class="form-agreement-link" href="#">Regulamin </a>i <a class="form-agreement-link" href="#">Politykę Prywatności.</a></label>
           <div class="agree-submit">
             <label class="form-agreement">
-              <input type="checkbox" name="agreement" value="agree" />Oświadczam iż akceptuję <a href="#">Regulamin </a>i <a href="#">Politykę Prywatności.</a>
+              <input type="checkbox" name="agreement" value="agree" class="form-agreement-txt"/>Oświadczam iż akceptuję <a class="form-agreement-link" href="#">Regulamin </a>i <a class="form-agreement-link" href="#">Politykę Prywatności.</a>
             </label>
           <button class="form-btn" type="submit">Wyślij</button>
           </div>
