--- a/index.html
+++ b/index.html
@@ -414,6 +414,17 @@
             </li>
           </ul>
         </div>
+        <div class="newsletter">
+          <p class="join-us">Zapisz się do newslettera</p>
+          <form class="newsletter-form">
+            <input class="newsletter-form-email" type="email" name="email-newsletter" placeholder="E-mail"/>
+            <button class="newsletter-form-btn newsletter-btn-flex" type="submit">Zapisz się
+                <svg class="newsletter-btn-icon">
+                  <use href="./images/icons.svg#send"></use>
+                </svg>              
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
     <div class="backdrop is-hidden" data-modal>
@@ -449,8 +460,7 @@
           <div class="agree-submit">
           <input class="modal-form-policy visually-hidden" id="user-policy" type="checkbox" name="policy"/>
           <label for="user-policy" class="modal-form-policy-txt">Oświadczam iż akceptuję <a class="form-agreement-link" href="#">Regulamin </a>i <a class="form-agreement-link" href="#">Politykę Prywatności.</a></label>
-          
-            <!-- <label class="form-agreement">
+      <!-- <label class="form-agreement">
               <input type="checkbox" name="agreement" value="agree" class="form-agreement-txt"/>Oświadczam iż akceptuję <a class="form-agreement-link" href="#">Regulamin </a>i <a class="form-agreement-link" href="#">Politykę Prywatności.</a>
             </label> -->
           <button class="form-btn" type="submit">Wyślij</button>
