--- a/portfolio.html
+++ b/portfolio.html
@@ -38,18 +38,22 @@
           </ul>
         </nav>
         <div class="contact">
-        <ul class="contact-list">
-          <li>
-            <a class="contact-link" href="mailto:info@devstudio.com">
-              <svg class="contact-icon" width="16" height="12">
-                <use href="./images/icons.svg#envelope"></use>
-                </svg>info@mdevstudio.com</a></li>
-          <li>
-            <a class="contact-link" href="tel:+48111111111">
-              <svg class="contact-icon" width="10" height="16">
-                  <use href="./images/icons.svg#phone"></use>
-              </svg>+48 111 111 111</a></li>
-        </ul>
+          <ul class="contact-list">
+            <li>
+              <a class="contact-link" href="mailto:info@devstudio.com">
+                <svg class="contact-icon" width="16" height="12">
+                  <use href="./images/icons.svg#envelope"></use></svg
+                >info@mdevstudio.com</a
+              >
+            </li>
+            <li>
+              <a class="contact-link" href="tel:+48111111111">
+                <svg class="contact-icon" width="10" height="16">
+                  <use href="./images/icons.svg#phone"></use></svg
+                >+48 111 111 111</a
+              >
+            </li>
+          </ul>
         </div>
       </div>
     </header>
@@ -69,13 +73,18 @@
           <li class="portfolio-content-list">
             <figure>
               <div class="portfolio-box">
-              <img
-                src="./images/por1.jpg"
-                alt="laptop view"
-                width="370"
-                height="294"
-              />
-              <p class="portfolio-overflow">Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
+                <img
+                  src="./images/por1.jpg"
+                  alt="laptop view"
+                  width="370"
+                  height="294"
+                />
+                <p class="portfolio-overflow">
+                  Technocrack jest popularną platformą wykorzystywaną do
+                  rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                  platformę do celów szpiegowskich i ataków na niezabezpieczone
+                  serwery konkurencji
+                </p>
               </div>
               <figcaption>
                 <p class="company">Technocrack</p>
@@ -86,14 +95,19 @@
           <li class="portfolio-content-list">
             <figure>
               <div class="portfolio-box">
-              <img
-                src="./images/por2.jpg"
-                alt="basketball players"
-                width="370"
-                height="294"
-              />
-                <p class="portfolio-overflow">Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
-              </div>              
+                <img
+                  src="./images/por2.jpg"
+                  alt="basketball players"
+                  width="370"
+                  height="294"
+                />
+                <p class="portfolio-overflow">
+                  Technocrack jest popularną platformą wykorzystywaną do
+                  rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                  platformę do celów szpiegowskich i ataków na niezabezpieczone
+                  serwery konkurencji
+                </p>
+              </div>
               <figcaption>
                 <p class="company">New Orlean vs Golden Star</p>
                 <p class="company-type">Dizajn</p>
@@ -103,14 +117,19 @@
           <li class="portfolio-content-list">
             <figure>
               <div class="portfolio-box">
-              <img
-                src="./images/por3.jpg"
-                alt="seafood restaurant logo"
-                width="370"
-                height="294"
-              />
-              <p class="portfolio-overflow">Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
-              </div>              
+                <img
+                  src="./images/por3.jpg"
+                  alt="seafood restaurant logo"
+                  width="370"
+                  height="294"
+                />
+                <p class="portfolio-overflow">
+                  Technocrack jest popularną platformą wykorzystywaną do
+                  rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                  platformę do celów szpiegowskich i ataków na niezabezpieczone
+                  serwery konkurencji
+                </p>
+              </div>
               <figcaption>
                 <p class="company">Restauracja Seafood</p>
                 <p class="company-type">Aplikacja</p>
@@ -120,13 +139,18 @@
           <li class="portfolio-content-list">
             <figure>
               <div class="portfolio-box">
-              <img
-                src="./images/por4.jpg"
-                alt="headphones"
-                width="370"
-                height="294"
-              />
-              <p class="portfolio-overflow">Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
+                <img
+                  src="./images/por4.jpg"
+                  alt="headphones"
+                  width="370"
+                  height="294"
+                />
+                <p class="portfolio-overflow">
+                  Technocrack jest popularną platformą wykorzystywaną do
+                  rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                  platformę do celów szpiegowskich i ataków na niezabezpieczone
+                  serwery konkurencji
+                </p>
               </div>
               <figcaption>
                 <p class="company">Projekt Prime</p>
@@ -137,13 +161,18 @@
           <li class="portfolio-content-list">
             <figure>
               <div class="portfolio-box">
-              <img
-                src="./images/por5.jpg"
-                alt="boxes"
-                width="370"
-                height="294"
-              />
-              <p class="portfolio-overflow">Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
+                <img
+                  src="./images/por5.jpg"
+                  alt="boxes"
+                  width="370"
+                  height="294"
+                />
+                <p class="portfolio-overflow">
+                  Technocrack jest popularną platformą wykorzystywaną do
+                  rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                  platformę do celów szpiegowskich i ataków na niezabezpieczone
+                  serwery konkurencji
+                </p>
               </div>
               <figcaption>
                 <p class="company">Projekt Boxes</p>
@@ -154,13 +183,18 @@
           <li class="portfolio-content-list">
             <figure>
               <div class="portfolio-box">
-              <img
-                src="./images/por6.jpg"
-                alt="monitor"
-                width="370"
-                height="294"
-              />
-              <p class="portfolio-overflow">Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
+                <img
+                  src="./images/por6.jpg"
+                  alt="monitor"
+                  width="370"
+                  height="294"
+                />
+                <p class="portfolio-overflow">
+                  Technocrack jest popularną platformą wykorzystywaną do
+                  rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                  platformę do celów szpiegowskich i ataków na niezabezpieczone
+                  serwery konkurencji
+                </p>
               </div>
               <figcaption>
                 <p class="company">Inspiration has no Borders</p>
@@ -171,13 +205,18 @@
           <li class="portfolio-content-list">
             <figure>
               <div class="portfolio-box">
-              <img
-                src="./images/por7.jpg"
-                alt="book"
-                width="370"
-                height="294"
-              />
-              <p class="portfolio-overflow">Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
+                <img
+                  src="./images/por7.jpg"
+                  alt="book"
+                  width="370"
+                  height="294"
+                />
+                <p class="portfolio-overflow">
+                  Technocrack jest popularną platformą wykorzystywaną do
+                  rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                  platformę do celów szpiegowskich i ataków na niezabezpieczone
+                  serwery konkurencji
+                </p>
               </div>
               <figcaption>
                 <p class="company">Magazyn Limited Edition</p>
@@ -188,13 +227,18 @@
           <li class="portfolio-content-list">
             <figure>
               <div class="portfolio-box">
-              <img
-                src="./images/por8.jpg"
-                alt="product tag"
-                width="370"
-                height="294"
-              />
-              <p class="portfolio-overflow">Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
+                <img
+                  src="./images/por8.jpg"
+                  alt="product tag"
+                  width="370"
+                  height="294"
+                />
+                <p class="portfolio-overflow">
+                  Technocrack jest popularną platformą wykorzystywaną do
+                  rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                  platformę do celów szpiegowskich i ataków na niezabezpieczone
+                  serwery konkurencji
+                </p>
               </div>
               <figcaption>
                 <p class="company">Projekt LAB</p>
@@ -205,13 +249,18 @@
           <li class="portfolio-content-list">
             <figure>
               <div class="portfolio-box">
-              <img
-                src="./images/por9.jpg"
-                alt="man working on laptop"
-                width="370"
-                height="294"
-              />
-              <p class="portfolio-overflow">Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
+                <img
+                  src="./images/por9.jpg"
+                  alt="man working on laptop"
+                  width="370"
+                  height="294"
+                />
+                <p class="portfolio-overflow">
+                  Technocrack jest popularną platformą wykorzystywaną do
+                  rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                  platformę do celów szpiegowskich i ataków na niezabezpieczone
+                  serwery konkurencji
+                </p>
               </div>
               <figcaption>
                 <p class="company">Growing Business</p>
@@ -269,6 +318,26 @@
               </a>
             </li>
           </ul>
+        </div>
+        <div class="newsletter">
+          <p class="join-us">Zapisz się do newslettera</p>
+          <form class="newsletter-form">
+            <input
+              class="newsletter-form-email"
+              type="email"
+              name="email-newsletter"
+              placeholder="E-mail"
+            />
+            <button
+              class="newsletter-form-btn newsletter-btn-flex"
+              type="submit"
+            >
+              Zapisz się
+              <svg class="newsletter-btn-icon">
+                <use href="./images/icons.svg#send"></use>
+              </svg>
+            </button>
+          </form>
         </div>
       </div>
     </footer>
