--- a/portfolio.html
+++ b/portfolio.html
@@ -42,15 +42,17 @@
             <li>
               <a class="contact-link" href="mailto:info@devstudio.com">
                 <svg class="contact-icon" width="16" height="12">
-                  <use href="./images/icons.svg#envelope"></use></svg
-                >info@mdevstudio.com</a
-              >
+                  <use href="./images/icons.svg#envelope"></use>
+                </svg>
+                info@mdevstudio.com
+              </a>
             </li>
             <li>
               <a class="contact-link" href="tel:+48111111111">
                 <svg class="contact-icon" width="10" height="16">
-                  <use href="./images/icons.svg#phone"></use></svg
-                >+48 111 111 111</a
+                  <use href="./images/icons.svg#phone"></use>
+                </svg>
+                +48 111 111 111</a
               >
             </li>
           </ul>
