--- a/index2.html
+++ b/index2.html
@@ -381,9 +381,9 @@
           </li>
         </ul>
         </div>
-        <div class="social-footer">
+        <div class="footer__social">
           <p class="join-us">Dołącz do nas</p>
-          <ul class="social-footer-list">
+          <ul class="footer__social-list">
             <li>
               <a class="social-list__link" href="#">
                 <svg class="social-icon">
@@ -416,10 +416,10 @@
         </div>
         <div class="newsletter">
           <p class="join-us">Zapisz się do newslettera</p>
-          <form class="newsletter-form">
-            <input class="newsletter-form-email" type="email" name="email-newsletter" placeholder="E-mail"/>
-            <button class="newsletter-form-btn newsletter-btn-flex" type="submit">Zapisz się
-                <svg class="newsletter-btn-icon">
+          <form class="newsletter__form">
+            <input class="newsletter__form-email" type="email" name="email-newsletter" placeholder="E-mail"/>
+            <button class="newsletter__form-btn newsletter__btn-flex" type="submit">Zapisz się
+                <svg class="newsletter__btn-icon">
                   <use href="./images/icons.svg#send"></use>
                 </svg>              
             </button>
